	Fixed slapo-syncprov filter race condition (ITS#6708)
	Fixed slapo-syncprov active mod race (ITS#6709)
	Fixed slapo-syncprov to refresh if context is dirty (ITS#6710)
	Fixed slapo-syncprov CSN updates to all replicas (ITS#6718)
	Fixed slapo-syncprov sessionlog ordering (ITS#6716)
	Fixed slapo-syncprov sessionlog with adds (ITS#6503)
	Fixed slapo-syncprov mutex (ITS#6438)
	Fixed slapo-translucent entry leak (ITS#6746)
	Fixed contrib/autogroup LDAP URI with attribute filter (ITS#6536)
	Fixed contrib/autogroup install location (ITS#6684)
	Fixed contrib/autogroup crash with ppolicy (ITS#6684)
	Fixed contrib/cloak callbacks (ITS#6762)
	Fixed contrib/nssov to only close socket on shutdown (ITS#6676)
	Fixed contrib/nssov multi platform support (ITS#6604)
	Build Environment
		Added support for [unsigned] long long (ITS#6622)
		Fixed config.guess/sub to pick up newer OSes (ITS#6547)
		Fixed libldap mutex code - cleanup (ITS#6672)
		Fixed libldap unnecessary ifdef's (ITS#6603)
		Fixed slapd-tester EOF handling (ITS#6723)
		Fixed slapd-tester filter initialization (ITS#6735)
		Fixed test scripts with alternate testdir (ITS#6782)
		Removed antiquated SunOS LWP support (ITS#6669)
	Documentation
		admin24 guide fix examples (ITS#6681)
		admin24 guide typo fixes (ITS#6609)
		admin24 guide refint rootdn requirement (ITS#6364)
		admin24 add pcache overlay section (ITS#6521)
		ldap_open(3) document ldap_set_urllist_proc (ITS#6601)
		ldap.conf(5) GnuTLS cipher spec info (ITS#6525)
		slapd.conf(5) GnlTLS cipher spec info (ITS#6525)
		slapd.conf(5) multi-listener support (ITS#6780)
		slapd-config(5) GnuTLS cipher spec info (ITS#6525)
		slapd-config(5) multi-listener support (ITS#6780)
		slapo-pcache(5) note rootdn requirement (ITS#6522)
		slapo-refint(5) rootdn requirement (ITS#6364)

OpenLDAP 2.4.23 Release (2010/06/30)
	Fixed libldap to return server's error code (ITS#6569)
	Fixed libldap memleaks (ITS#6568)
	Fixed liblutil off-by-one with delta (ITS#6541)